# groupme-pirates-bot

./: .env.template  .gitignore  CHANGELOG_MESSAGE_MANAGEMENT.md  CHECKPOINT.md  CURRENT_CHANGES.patch  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY_2025-10-29.md  Dockerfile  GROUPME_API_LIMITATION.md  MESSAGE_MANAGEMENT.md  MESSAGE_MANAGEMENT_QUICK_REF.md  README.md  REMINDER_FIX.md  REMINDER_HOURS_CONFIG.md  REMINDER_IMPROVEMENTS.md  TEAM_CUSTOMIZATION.md  TEAM_NAME_FIX.md  TODO.md  TROUBLESHOOTING_MESSAGE_MGMT.md  cleanup-logs.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  setup-team.sh  traefik-example.yml  verify-deployment.sh
.github/: CICD_SETUP.md
.github/workflows/: ci-cd.yml
deploy/: .env.template  docker-compose.yml
deployment-variants/: docker-compose.debug.yml  docker-compose.local.yml  docker-compose.prod.yml
src/: auth.rs  config.rs  conversation_context.rs  conversational_parser.rs  conversational_parser.rs.backup2  conversational_parser.rs.pre-update  error.rs  google_client.rs  groupme_client.rs  lib.rs  main.rs  models.rs  moderators.rs  parser.rs  parser.rs.bak  reminder.rs  service.rs  team_facts.rs  weather_client.rs
