[package]
name = "groupme-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "groupme-bot"
path = "src/main.rs"

[[bin]]
name = "test-bot"
path = "src/bin/test_bot.rs"

[[bin]]
name = "test-bot-mock"
path = "src/bin/test_bot_mock.rs"

[[bin]]
name = "test-google-apis"
path = "src/bin/test_google_apis.rs"

[dependencies]
# Web server for handling GroupMe callbacks
actix-web = "4"
tokio = { version = "1", features = ["full"] }

# HTTP client for GroupMe and Google APIs (async only)
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variable management
dotenvy = "0.15"
once_cell = "1.19"
urlencoding = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# iCal parsing for webcal URLs
ical = "0.10"

# Random number generation for Pirates facts
rand = "0.8"

# Google Service Account authentication
jsonwebtoken = "9.3"
base64 = "0.22"

[[bin]]
name = "test-sheets-detailed"
path = "src/bin/test_sheets_detailed.rs"
